--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -4,3 +4,4 @@ set(PIPELINE_SRC ${src} CACHE INTERNAL "pipeline sources")
 set(PIPELINE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "pipeline include dir")
 
 add_subdirectory(catch)
+add_subdirectory(deeplocalizer-tagger)
