--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,24 +4,26 @@ cmake_policy(SET CMP0020 NEW)
 cmake_policy(SET CMP0009 NEW)
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+
 project(deeplocalizer_tagger)
+
+#------------------------------------------------------------------------------
 # Required CPM Setup - no need to modify - See: https://github.com/iauns/cpm
 #------------------------------------------------------------------------------
-set(CPM_DIR "${CMAKE_CURRENT_BINARY_DIR}/cpm-packages" CACHE TYPE STRING)
+set(CPM_DIR "${CMAKE_CURRENT_BINARY_DIR}/cpm_packages" CACHE TYPE STRING)
 find_package(Git)
 if(NOT GIT_FOUND)
-    message(FATAL_ERROR "CPM requires Git.")
+  message(FATAL_ERROR "CPM requires Git.")
 endif()
-
 if (NOT EXISTS ${CPM_DIR}/CPM.cmake)
-    message(STATUS "Cloning repo (https://github.com/iauns/cpm)")
-    execute_process(
-            COMMAND "${GIT_EXECUTABLE}" clone https://github.com/iauns/cpm ${CPM_DIR}
-            RESULT_VARIABLE error_code
-            OUTPUT_QUIET ERROR_QUIET)
-    if(error_code)
-        message(FATAL_ERROR "CPM failed to get the hash for HEAD")
-    endif()
+  message(STATUS "Cloning repo (https://github.com/iauns/cpm)")
+  execute_process(
+    COMMAND "${GIT_EXECUTABLE}" clone https://github.com/iauns/cpm ${CPM_DIR}
+    RESULT_VARIABLE error_code
+    OUTPUT_QUIET ERROR_QUIET)
+  if(error_code)
+    message(FATAL_ERROR "CPM failed to get the hash for HEAD")
+  endif()
 endif()
 include(${CPM_DIR}/CPM.cmake)
 
@@ -61,23 +63,19 @@ find_package(Threads REQUIRED)
 find_package(Boost COMPONENTS system filesystem serialization program_options REQUIRED)
 find_package(Glog REQUIRED)
 find_package(CUDA REQUIRED)
-find_package(HDF5 COMPONENTS CXX REQUIRED)
+find_package(HDF5 COMPONENTS C REQUIRED)
 
 
-# Qt options
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 add_definitions(${Qt5Widgets_DEFINITIONS})
 
 
-# include deps dependecies as SYSTEM headers to prevent warnings from
-# deps files. unfortunatelly, this has no effect when using MSVC.
 include_directories(
     SYSTEM ${CATCH_INCLUDE_DIR}
     SYSTEM ${Qt5Widgets_INCLUDE_DIRS}
     SYSTEM ${OpenCV_INCLUDE_DIRS}
     SYSTEM ${Qt5OpenGL_INCLUDE_DIRS}
-    SYSTEM ${Caffe_INCLUDE_DIRS}
     SYSTEM ${CUDA_INCLUDE_DIRS}
 )
 
@@ -91,6 +89,7 @@ set(libs
     Qt5::OpenGL
     ${OPENGL_LIBRARIES}
     ${GLOG_LIBRARY}
+    ${HDF5_LIBRARIES}
     ${CPM_LIBRARIES}
 )
 
