Add json serialization to image description and tags
The JSON serialization will replace the boost serialization format.
This commit adds everything to dump/load `ImageDesc` and `Tag` as JSON.
It does not change the existing boost serialization.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,10 @@ else()
         GIT_TAG "cpm")
 endif()
 
+CPM_AddModule("cpm_nlohmann_json"
+    GIT_REPOSITORY "https://github.com/berleon/cpm_nlohmann_json.git"
+)
+
 CPM_Finish()
 
 
