--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,13 +64,14 @@ set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/ ${CMAKE_MODULE_PATH})
 find_package(OpenCV REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(Qt5Core REQUIRED)
+find_package(Qt5Core REQUIRED)
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5OpenGL REQUIRED)
 find_package(Threads REQUIRED)
 find_package(Boost COMPONENTS system filesystem serialization program_options REQUIRED)
 find_package(Glog REQUIRED)
 find_package(CUDA REQUIRED)
-find_package(HDF5 COMPONENTS C REQUIRED)
+find_package(HDF5 COMPONENTS C HL REQUIRED)
 
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -85,6 +86,7 @@ include_directories(
     SYSTEM ${Qt5OpenGL_INCLUDE_DIRS}
     SYSTEM ${CUDA_INCLUDE_DIRS}
     SYSTEM ${Boost_INCLUDE_DIR}
+    SYSTEM ${HDF5_INCLUDE_DIRS}
 )
 
 set(libs
